--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": "^8.2",
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
+        "mews/purifier": "^3.4",
         "parsedown/laravel": "^1.2"
     },
     "require-dev": {
